--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,13 @@ anyhow = "1"
 thiserror = "2"
 
 # Configuration
-figment = { version = "0.10", features = ["toml", "env"] }
+figment2 = { version = "0.11", features = ["toml", "env"] }
 
 # Utilities
 bytes = "1"
 url = "2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Shell completions
+clap_complete = "4"
