Fix GStreamer pipeline property type errors and add beads tracking
## GStreamer Property Fixes

- Fix pulsesrc buffer-time/latency-time: i32 -> i64 type casting
- Fix opusenc audio-type enum: use property_from_str() with string values
- Fix opusenc frame-size enum: use property_from_str() with string values
- Remove max_ptime property (not used by opusenc)
- Remove max_ptime from config.toml and CLI args

## Beads Integration

- Add .beads/ for issue tracking (epic + 7 tasks)
- Epic: Comprehensive GStreamer element configurability improvements
- Created tasks for: pulsesrc, capsfilter, audioconvert, audioresample, opusenc, appsink, pipewire switch
- Documented opusenc enum handling as reference pattern
- Exported issues.jsonl for git tracking

## Notes

- Used gst-inspect to enumerate enum properties (audio-type, frame-size)
- Enum pattern: property_from_str() with string values ("voice"|"generic", "20", etc.)
- This is the correct approach for GStreamer enum properties

--- a/config.toml
+++ b/config.toml
@@ -7,10 +7,9 @@ track_name = "audio"
 sample_rate = 48000
 channels = 2
 bitrate = 96000
-application = "voip"
+application = "generic"
 complexity = 5
 frame_size = 20
-max_ptime = 20
 
 [pipeline]
 buffer_time = 20000
