Update Rust edition to 2024
Cargo doesn't support edition 2025. Updated from 2024 to 2025 which caused a parse error, then reverted to 2024 which is the latest supported edition.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,6 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Shell completions
 clap_complete = "4"
+
+# Builder patterns (experimental)
+bon = "3.8"
