Remove unused hang crate dependency
The code uses moq_native::moq_lite directly, making the hang crate
unnecessary. Updated all broadcast paths from /live/audio.hang to
/live/audio and cleaned up documentation references.

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 [relay]
 url = "https://localhost:4443/anon"
-broadcast_path = "/live/audio.hang"
+broadcast_path = "/live/audio"
 track_name = "audio"
 
 [audio]
